# magi

./: .gitignore  CMakeLists.txt  Doxyfile  Utils.h  audioProcesser.h  collisionchecker.h  colors.cpp  colors.h  cqt.cpp  cqt.h  effects.cpp  effects.h  fft.cpp  fft.h  handler.h  imagedrawer.h  interface.h  interface.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resource.qrc  stage.cpp  statement.h  utils.cpp  utils.h
